Actions
Bug #5773
closedbigdecimal comparison raises SystemStackError
Bug #5773:
bigdecimal comparison raises SystemStackError
Description
Files
Updated by nobu (Nobuyoshi Nakada) over 14 years ago
- Status changed from Open to Closed
- % Done changed from 0 to 100
This issue was solved with changeset r34070.
Aaron, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.
- ext/bigdecimal/bigdecimal.c (Init_bigdecimal): does not follow
allocation framework right now. [ruby-core:41710] [Bug #5773]
Actions