* ext/bigdecimal/bigdecimal.c (Init_bigdecimal): does not follow   allocation framework right now.  [ruby-core:41710] [Bug #5773]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@34070 b2dd03c8-39d4-4d8f-98ff-823fe69b080e